CHANGES IN VERSION 3.3.4
------------------------
 o dotplot for compareClusterResult to support 3 GO sub-ontologies <2016-12-8, Thu>
 o bug fixed of determine `ont` from `expand.dots` <2016-12-06, Mon>
   + see https://github.com/GuangchuangYu/clusterProfiler/issues/72

CHANGES IN VERSION 3.3.3
------------------------
 o switch from BiocStyle to prettydoc <2016-11-30, Wed>
 o change summary to as.data.frame in internal calls to prevent warning message <2016-11-14, Mon>

CHANGES IN VERSION 3.3.2
------------------------
 o define simplify generics as it was removed from IRanges <2016-11-11, Fri>

CHANGES IN VERSION 3.3.1
------------------------
 o update startup message <2016-11-09, Wed>
 o bug fixed in enrichDAVID <2016-11-06, Sun>
   + https://guangchuangyu.github.io/2015/10/use-simplify-to-remove-redundancy-of-enriched-go-terms/#comment-2987574851
 o bug fixed in head, tail and dim for compareCluster object <2016-10-18, Tue>

CHANGES IN VERSION 3.2.0
------------------------
 o BioC 3.4 released <2016-10-18, Tue>

CHANGES IN VERSION 3.1.9
------------------------
 o bug fixed of simplify method for compareCluster object <2016-08-17, Mon>
   + use semData parameter according to the change of GOSemSim

CHANGES IN VERSION 3.1.8
------------------------
 o as.data.frame method for compareClusterResult <2016-09-29, Thu>
 o geneID and geneInCategory methods <2016-09-19, Mon>

CHANGES IN VERSION 3.1.7
------------------------
 o [, [[, head, tail, dim methods for compareClusterResult <2016-08-28, Sun>
 o fixed R-devel check <2016-08-16, Tue>

CHANGES IN VERSION 3.1.6
------------------------
 o update vignette <2016-08-16, Tue>
 o browseKEGG <2016-08-15, Mon>
 o unit test <2016-08-15, Mon>

CHANGES IN VERSION 3.1.5
------------------------
 o move enrichMeSH & gseMeSH to meshes <2016-08-11, Thu>

CHANGES IN VERSION 3.1.4
------------------------
 o MeSH term enrichment analysis (enrichMeSH and gseMeSH) <2016-07-28, Thu>

CHANGES IN VERSION 3.1.3